--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: "Manrope", sans-serif;
-    background-color: rgb(8, 1, 44);
+    background-image: linear-gradient(to bottom right, rgba(181, 87, 243, 0.2), rgba(181, 87, 243, 0.5), rgba(181, 87, 243, 0.8), rgba(181, 87, 243, 1.0));
 }
 
 * {
