--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,9 @@ html, body {
 
 .header {
     border-radius: 10px 10px 0 0;
-    border: 3px solid rgb(253, 253, 155);
+    border: 3px solid rgba(248, 16, 147, 0.7);
     background-color: transparent;
+    margin: 20px 50px;
     padding: 2px;
 }
 
@@ -27,18 +28,26 @@ html, body {
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 1.5rem;
-    color: rgb(228, 238, 247);
+    color: rgb(153, 7, 131);
+    text-shadow: 1px 1px 3px rgb(35, 33, 33); 
 }
 
 fieldset {
-    margin: 10px 0;
-    border: 3px solid rgb(253, 253, 155);
+    margin: 20px 50px;
+    padding: 20px;
+    border: 3px solid rgba(248, 16, 147, 0.7);
+}
+
+.last {
+    border-radius: 0 0 10px 10px;
 }
 
 legend {
     text-align: center;
     text-transform: uppercase;
-    color: rgb(228, 238, 247);
+    color: rgb(59, 1, 51);
     letter-spacing: 2px;
     font-size: 1.2rem;
 }
+
+
