--- a/styles.css
+++ b/styles.css
@@ -53,3 +53,14 @@ legend {
 .content {
     padding-bottom: 10px;
 }
+
+.content input[type=text], input[type=number], input[type=date], select  {
+    border-radius: 5px;
+    outline: none;
+    background: transparent;
+    border: 2px solid rgb(14, 83, 230);
+}
+
+.content input[placeholder] {
+    color: rgb(211, 80, 80);
+}
