--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,13 @@ legend {
     height: auto;
     width: 100%;
     padding: 10px;
+    font-size: 1.2rem;
 }
+
+.content input[type=text]:focus, .content input[type=number]:focus, .content input[type=date]:focus, .content select:focus {
+    border: 2px solid rgb(4, 43, 128);
+    transition: .5s;
+} 
 
 
 
