--- a/styles.css
+++ b/styles.css
@@ -73,9 +73,10 @@ legend {
     position: absolute;
     font-size: 0.9rem;
     transform: translate(10px, -10px);
-    background: rgb(12, 158, 206);
+    background: rgb(63, 197, 242);
     padding: 1px 2px;
     border-radius: 5px;
+    border: 2px solid rgb(3, 56, 86);
 }
 
 .content input[type=text], input[type=number], input[type=date], select  {
